Wed May 14 19:31:03 2014  Koichi Sasada  <ko1@atdot.net>

	* ext/openssl/depend: remove dependency from internal headers.
	  [Feature #9612]

	* ext/openssl/ossl.c (ossl_fips_mode_set): ditto.

	* ext/coverage/depend: ditto.

	* include/ruby/thread_native.h: added.

	  This header file only provides wrapper functions to control
	  native threads. These wrapper functions are used by MRI
	  implementation.

	* vm_core.h: use include/ruby/thread_native.h.

	* thread.c: ditto.

	* thread_pthread.h: ditto.

	* thread_win32.h: ditto.

	* thread_native.h: removed.

Wed May 14 18:03:28 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: enable RGENGC_AGE2_PROMOTION.

Wed May 14 18:02:30 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rgengc_rememberset_mark): promote remembered object earlier.

Mon May 12 23:57:15 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_atan2_inf_c99): check whether runtime atan2
	  handles Inf as C99. [ruby-core:62536] [Bug #9831]

Mon May 12 20:33:01 2014  Tanaka Akira  <akr@fsij.org>

	* configure.in: Invoke AC_REPLACE_FUNCS for each function.

Mon May 12 19:52:11 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: count young object correctly and show it in GC.stat
	  on RGENGC_AGE2_PROMOTION.

	* gc.c (RVALUE_PROMOTE_YOUNG): decrement young object count on
	  YOUNG->OLD.

	* gc.c (obj_free): decrement young object count when young object
	  freed.

	* gc.c (gc_marks): should not clear young object count.

	* gc.c (gc_stat_internal): GC.stat :young_object information.

Mon May 12 01:30:59 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ifaddr.c (IS_IFADDRS): Unused macro removed.

	* ext/strscan/strscan.c (BUFSIZE): Ditto.

	* ext/zlib/zlib.c (OBJ_IS_FREED): Ditto.

Sun May 11 22:27:18 2014  Tanaka Akira  <akr@fsij.org>

	* compile.c (BUFSIZE): Unused macro removed.

	* vm.c (BUFSIZE): Ditto.

	* pack.c (INT64toNUM): Ditto.
	  (UINT64toNUM): Ditto.
	  (BYTEWIDTH): Ditto.

	* time.c (lshift): Ditto.
	  (UINT64toNUM): Ditto.